# zen

./: .gitignore  Cargo.toml  LICENSE  build.groovy  build.zen  notes.md  packages.groovy  readme.md
dockerAPI/: buid.groovy  packages.groovy
example/: build.groovy
example/src/: callbacks.groovy  dateframe.groovy  example.groovy  meta.groovy  orm.groovy
examples/: dijkstra.zen
examples/dockerApi/: buid.groovy  buid.zen  packages.zen
examples/forum/: build.zen  packages.groovy
examples/misc/: build.groovy  build.zen
examples/src/: example.groovy  meta.groovy  orm.groovy
examples/weby/: build.zen
misc/src/: orm.groovy
src/: ZenLexer.g4  ZenParser.g4  ast.nim  ast.rs  callbacks.groovy  codegen.rs  dateframe.groovy  example.groovy  example.zen  exampleAst.rs  lexer.cpp  lexer.nim  lexer.rs  lexer.zen  lexer_test.cpp  main.groovy  main.rs  meta.groovy  parser.rs  parser.zen  thought.rs  token.nim  token.rs  tokenizer.rs  wat_codegen.rs
src/tests/: test.zen
std/: If.groovy  Loop.groovy  async.zen  benchmark.groovy  benchmark.rs  bitops.groovy  builtin.groovy  builtin.zen  functions.groovy  functions.zen  http.groovy  http.rs  http.zen  json.groovy  json.zen  memory.rs  memory.zen  orm.groovy  orm.zen  std.zen  vector.groovy
std/arrays/: array.groovy  dataframe.groovy
std/conditionals/: If.groovy  Loop.groovy  if.zen  loop.zen
std/data/: array.zen  dataframe.zen  map.groovy  map.zen
std/functions/: Loop.groovy
std/random/: random.groovy
std/science/: neuralNetwork.groovy  neuralNetwork.zen
std/test/: benchmark.groovy  test.groovy
(+42 files in other folders)
