[package]
name = "zen"
version = "0.1.0"
edition = "2021"
author = "Lyndon Leong <l.leong1618[at]gmail.com>"
description = "The rust implementation of the Zen programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
clap = { version = "4.1.6", features = ["derive"] }
serde = {version="1.0.152",  features = ["derive"] }
serde_json = "1.0.93"
